# ooptdd

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  METHODOLOGY.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
PROVENANCE/: priority-20260715.manifest  priority-20260715.manifest.ots
benchmarks/arrival/v0/: manifest.json  trajectory-events.json
docs/: MIGRATING_CONSUMERS.md  THREAT_MODEL.md  WEAKNESS_RESOLUTION_PLAN.md  backends.md  case_studies.md  case_study_template.md  ci_mutation_gate.md  competitive_feedback.md  quickstart.md  warn_to_strict.md  why_arrival_testing.md
docs/receipts/: agent-trajectory-gate-2026-07-23.yaml  agent-trajectory-negative-2026-07-23.json  agent-trajectory-ooptdd-receipt-2026-07-23.json  agent-trajectory-positive-2026-07-23.json  contract-mock-parity-2026-07-22.events.jsonl  contract-mock-parity-2026-07-22.md
docs/receipts/lakatotree-trajectory-qualification/: README.md  baseline-raw.json  baseline-v2.json  candidate-negative-raw.json  candidate-negative-v2.json  (+20 more)
docs/research/: EXPERIMENT_TREE.md  README.md  agent_trajectory_absorption.md  arrival_benchmark_spec.md  ooptdd_A1_identity_official.md  ooptdd_A2_prior_art_landscape.md  ooptdd_A3_identity_pitfalls.md  ooptdd_A4_identity_design.md  ooptdd_B1_packaging_official.md  ooptdd_B2_packaging_priorart.md  ooptdd_B3_packaging_pitfalls.md  ooptdd_B4_packaging_design.md  ooptdd_C1_backend_official.md  ooptdd_C2_backend_prior_art.md  ooptdd_C3_backend_pitfalls.md  ooptdd_C4_backend_design.md  ooptdd_D1_adoption_official.md  ooptdd_D2_competition_priorart.md  ooptdd_D3_adoption_pitfalls.md  ooptdd_D4_adoption_design.md  ooptdd_E_oss_adoption_prom12_20260616.md  ooptdd_F_lakatotree_meta_research_20260626.md  ooptdd_F_oss_absorption_20260722.md  ooptdd_F_proposals_verified_20260722.json
docs/schema/: envelope.schema.json
examples/: __init__.py  agent_gen_ai.py  app.py  ontology.yaml  test_agent_gen_ai.py  test_agent_trajectory.py  test_order_pipeline.py
examples/gates/: order_pipeline.yaml
examples/integrations/: test_deepeval_arrival.py  test_otel_verdict_export.py
examples/openobserve_demo/: README.md  demo_green.py  demo_inconclusive.py  demo_silent_401.py  docker-compose.yml
scripts/: build_ooptdd_efficacy_evidence.py  capture_actions_receipt.py  gen_backend_matrix.py  gen_parity_receipt.py  reconcile_consumers.py  run_arrival_benchmark.py  run_efficacy_measurement.py  run_lakatotree_trajectory_judge.py  run_tier1_benchmark.py  sanitize_case_study.py  sync_consumers_from_head.py  validate_trajectory_evidence.py  vendor_ooptdd.py  verify_agent_trajectory_receipt.py
scripts/templates/: conftest_ooptdd_required.py  test_ooptdd_vendor_drift.py
src/ooptdd/: __init__.py  assertions.py  benchmark.py  cli.py  config.py  evidence_integrity.py  gate.py  gen_ai_emit.py  model.py  monitor.py  mutation.py  ontology.py  plugin.py  reports.py  semconv.py  verify.py
tests/: conftest.py  test_architecture.py  test_arrival_benchmark.py  test_arrival_policy.py  test_backend_hardening.py  test_backend_window_seq_20260708.py  test_check_registry.py  test_check_seam.py  test_cli.py  test_clickhouse_backend.py  test_config_parse.py  test_confirm_rounds.py  test_conformance.py  test_contract_mock_parity_receipt.py  test_count_tautology_20260708.py  test_docs_backend_matrix.py  test_efficacy_scripts.py  test_emit_surface.py  test_engine_arch.py  test_error_detail.py  test_evidence_integrity.py  test_evidence_tier.py  test_external_probe.py  test_fixtures_and_cid.py  test_gate.py  test_gate_scope.py  test_gate_slo.py  test_gen_ai_emit.py  test_integrations.py  test_invariant_and_lint.py  test_jsonl_backend.py  test_kernel_grill_20260722.py  test_kernel_grill_f5_f11_20260722.py  test_lakatotree_trajectory_programme.py  test_longinus_source_bindings.py  test_memory_backend.py  test_metamorphic.py  test_model.py  test_monitor_streaming.py  test_mutation.py  (+35 more)
(+45 files in other folders)
